--- a/OpenWeatherApi/appsettings.Development.json
+++ b/OpenWeatherApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Debug"
     }
+  },
+  "OpenWeather": {
+    "ApiKey": "YOUR_DEV_OPENWEATHER_API_KEY"
   }
 }
