--- a/OpenWeatherApi/appsettings.json
+++ b/OpenWeatherApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenWeather": {
+    "ApiKey": "71c1604954742e250e1647f953b8c56e"
+  }
 }
