--- a/openweather-ui/.env.example
+++ b/openweather-ui/.env.example
@@ -1,2 +1,2 @@
 # Base URL for the ASP.NET Core backend
-VITE_API_BASE_URL=https://localhost:7218
+VITE_API_BASE_URL=https://silver-capybara-wxjw6j7vjvj25j4p-5218.app.github.dev
