--- a/openweather-ui/package.json
+++ b/openweather-ui/package.json
@@ -15,15 +15,20 @@
     "@emotion/styled": "^11.11.3",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^0.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "typescript": "^5.6.3",
     "vite": "^7.1.10"
   }
 }
